# mineclone

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
shaders/: cube.frag  cube.vert
src/: main.cpp
src/block/: Block.cpp  Block.h
src/chunk/: Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h
src/shader/: Shader.cpp  Shader.h
src/types/: Types.cpp  Types.h
src/world/: World.cpp  World.h  WorldRenderer.cpp  WorldRenderer.h
